src/objects/EFCell__c.object
<CustomObject>
    <fields>
        <fullName>DataSetField__c</fullName>
        <label>Data Set Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFDataSet__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EF Data Set</label>
        <referenceTo>EFDataSet__c</referenceTo>
        <relationshipLabel>EF Cells</relationshipLabel>
        <relationshipName>EFCells</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFRowIndex__c</fullName>
        <formula>EFRow__r.Index__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EFRow Index</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>EFRow__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>EF Row</label>
        <referenceTo>EFRow__c</referenceTo>
        <relationshipLabel>EF Cells</relationshipLabel>
        <relationshipName>EFCells</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>EFSheet__c</fullName>
        <formula>EFRow__r.EFSheet__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>EFSheet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>EFStyle__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>EF Style</label>
        <referenceTo>EFStyle__c</referenceTo>
        <relationshipLabel>EF Cells</relationshipLabel>
        <relationshipName>EFCells</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Formula__c</fullName>
        <label>Formula</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Index__c</fullName>
        <label>Index</label>
        <precision>4</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>NumberFormat__c</fullName>
        <label>Number Format</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>0.00%</fullName>
                </value>
                <value>
                    <fullName>&quot;£&quot;#,##0.00;[Red]\-&quot;£&quot;#,##0.00</fullName>
                </value>
                <value>
                    <fullName>&quot;$&quot;#,##0.00;[Red]\-&quot;£&quot;#,##0.00</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>EF Cell</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>EFRow__c</columns>
        <columns>EFStyle__c</columns>
        <columns>EFRowIndex__c</columns>
        <columns>EFSheet__c</columns>
        <columns>Value__c</columns>
        <columns>Index__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>EF Cells</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>